trunk/Archive2/89/d042b09a801c66/output
main.cpp: In function 'int main()':
main.cpp:16:14: error: 'red' was not declared in this scope
     auto x = red;
              ^
